src/objects/BMCServiceDesk__BMC_FinancialElement__c.object
<CustomObject>
    <description>BMC_FinancialElement. CMDB Abstract Class stores the cost and price information associated to a service offering. This class is further specialized by the BMC_Cost and BMC_Price classes. BMC_Cost represents the cost incurred in providing a certain service and BMC_Price specifies how much a consumer is required to pay for the service.</description>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Per_Time_Period__c</fullName>
        <label>Per Time Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UOM__c</fullName>
        <label>UOM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Financial Element</label>
    <nameField>
        <label>Financial Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>